--- a/src/InclusivenessAnalyzer/InclusivenessAnalyzer.Package/InclusivenessAnalyzer.Package.csproj
+++ b/src/InclusivenessAnalyzer/InclusivenessAnalyzer.Package/InclusivenessAnalyzer.Package.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -9,15 +9,17 @@
 
   <PropertyGroup>
     <PackageId>InclusivenessAnalyzer</PackageId>
-    <PackageVersion>1.0.0.0</PackageVersion>
-    <Authors>Sana, Bliss, Merill</Authors>
+    <PackageVersion>1.1.0.0</PackageVersion>
+    <Authors>Sana, Jo, Bliss, Merill</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/merill/InclusivenessAnalyzer</PackageProjectUrl>
     <PackageIconUrl></PackageIconUrl>
     <RepositoryUrl>https://github.com/merill/InclusivenessAnalyzer</RepositoryUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Description>Inclusiveness Analyzer</Description>
-    <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
+    <Description>Inclusiveness Analyzer is Roslyn analyzer that checks your code for non-inclusive terms and suggests alternative terms.
+	As humans, we hold many unconscious and implicit biases that we rely on to react quickly to our environment and any novel stimuli. However, since the unconscious brain processes and reacts with speed, we sometimes speak quickly without thinking, which may cause us to slip offensive terms and stereotypes although we mean no malice. In order to confront these biases that we see in ourselves and others, we must rewire ourselves to regularly use inclusive practices (such as the words we speak). If you don't intentionally and proactively include, you will unintentionally exclude. Join our effort to push out exclusive terms and make inclusive terms a part of our everyday vocabulary!
+    </Description>
+    <PackageReleaseNotes>Updated word list.</PackageReleaseNotes>
     <Copyright>Copyright</Copyright>
     <PackageTags>InclusivenessAnalyzer, analyzers</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
